--- a/P2FixAnAppDotNetCode/Views/Shared/_Layout.cshtml
+++ b/P2FixAnAppDotNetCode/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <title>@ViewData["Title"] - ESP EHOD 2025</title>
+    <title>@ViewData["Title"] - ESP OD 2025</title>
 </head>
 <body>
     <div class="navbar navbar-inverse bg-primary" role="navigation">
